--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <input type="text" id="username" name="username" required>
             </div>
             <div class="form-group">
-                <label for="DARSH">password</label>
+                <label for="DARSH">PASSWORD</label>
                 <input type="password" id="password" name="password" required>
             </div>
             <button type="submit" class="login-btn">Login</button>
