--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f4f4f9;
+            background-color: #6e650e;
             margin: 0;
             padding: 0;
             display: flex;
@@ -16,7 +16,7 @@
             height: 100vh;
         }
         .login-container {
-            background-color: #fff;
+            background-color: #ffffff;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
             border-radius: 8px;
             padding: 20px 30px;
@@ -79,7 +79,7 @@
                 <input type="text" id="username" name="username" required>
             </div>
             <div class="form-group">
-                <label for="DARSH">PASSWORD</label>
+                <label for="DARSH">password</label>
                 <input type="password" id="password" name="password" required>
             </div>
             <button type="submit" class="login-btn">Login</button>
